# os-p5-starter

./: CMakeLists.txt  README.md  Retrospective.md  createplot.sh  graph.plt
src/: CMakeLists.txt  lab.h  main.cpp
tests/: test-lab.cpp
